25 February 2021: Wouter
	- Merge PR #367 : DNSTAP log local address.  With code from PR #365
	  and fixes #368 : dnstap does not log the DNS message ID for
	  FORWARDER_QUERY.
	- Fix to allow rpz with wildcard that applies to all TLDs at once.

24 February 2021: George
	- Fix #384: (1) A minor request to improve the log (2) A minor bug in one
	  log message.
	- ipsecmod: Better logging for detecting a cycle when attaching the
	  A/AAAA subquery.

24 February 2021: Wouter
	- On startup of unbound it checks if rlimits on memory size look
	  sufficient for the configured cache size, and logs warning if not.
	- Fix function documentation.
	- Fix unit test for added ulimit checks.
	- spelling fix in header.

23 February 2021: Wouter
	- Fix for zonemd, that domain-insecure zones work without dnssec.
	- Fix for zonemd, do not reject insecure result from trust anchor
	  validation step in dnssec chain of trust.

22 February 2021: Wouter
	- Fix #431: Squelch permission denied errors for tcp connect
	  and udp connect from the logs, unless at high verbosity.
	- Fix for zonemd, that nxdomain for the chain of trust is allowed
	  for island zones, it is treated as an insecure zone for verification.

18 February 2021: Wouter
	- Merge PR #317: ZONEMD Zone Verification, with RFC 8976 support.
	  ZONEMD records are checked for zones loaded as auth-zone,
	  with DNSSEC if available.  There is an added option
	  zonemd-permissive-mode that makes it log but not fail wrong zones.
	  With zonemd-reject-absence for an auth-zone the presence of a
	  zonemd can be mandated for specific zones.
	- Fix doxygen and pydoc warnings.
	- Fix #429: rpz: url: with https: broken (regression in 1.13.1).
	- rpz skip nsec3param records, and nicer log for unsupported actions.

15 February 2021: Wouter
	- Fix #422: IPv6 fallback issues when IPv6 is not properly
	  enabled/configured.
	- Fix to make tests work with support indicators set for iterator.
	- Fix build on Python 3.10.

10 February 2021: Wouter